--- a/.github/workflows/gitleaks.yml
+++ b/.github/workflows/gitleaks.yml
@@ -3,21 +3,23 @@ name: Gitleaks
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   gitleaks:
     name: Run Gitleaks
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Install Gitleaks
+        uses: gitleaks/gitleaks-action@v2.3.6
+
       - name: Run Gitleaks
         uses: gitleaks/gitleaks-action@v2.3.6
         with:
-          args: --report=gitleaks-report.json
+          config: '.github/workflows/.gitleaks.toml'
